@@ -1,3 +1,7 @@
+Travel::Status::DE::IRIS 1.72 - Mon Oct 03 2022
+
+    * Update IRIS station list
+
 Travel::Status::DE::IRIS 1.71 - Sun Oct 02 2022
 
     * Update IRIS station list
